# RESTUEKTimetableAPI

./: db.sqlite3  manage.py  pyproject.toml
RESTUEKTimetable/: asgi.py  settings.py  urls.py  wsgi.py
Timetable_app/: admin.py  apps.py  config.py  database_utils.py  interface.py  models.py  urls.py  views.py
Timetable_app/migrations/: 0001_initial.py  0002_alter_timetable_updated.py  0003_auto_20221101_2258.py
Timetable_app/scraper/: convert.py  scraper.py  timetable_utils.py
templates/static/: test.html
