[tool.poetry]
name = "restuektimetable"
version = "0.1.0"
description = ""
authors = ["Wym <dewreator2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
requests = {extras = ["security"], version = "^2.28.1"}
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
